la til elementer og sånt ye (ikke brukbare ennå)

--- a/reiseplanlegger.html
+++ b/reiseplanlegger.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="index_wrapper">
-        <h1 id="i_h1">Søkeresultater</h1>
+        <h1 id="i_h1">Laster inn...</h1>
         <p id="resultater"></p>
     </div>
     <script src="reiseplanlegger.js"></script>
