--- a/trip.html
+++ b/trip.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resultater</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="index_wrapper">
         <h1 id="i_h1">Laster inn...</h1>
-        <p id="resultater"></p>
+        <div id="departuredisplay"></div>
     </div>
-    <script src="reiseplanlegger.js"></script>
+    <script src="trip.js"></script>
 </body>
 </html>
