--- a/index.html
+++ b/index.html
@@ -10,11 +10,19 @@
 <body>
     <div class="index_wrapper">
         <h1 id="i_h1">Reiseplanlegger</h1>
+
+        <!------->
+        <!--FRA-->
+        <!------->
         <p class="i_p">Fra:</p>
         <form id="i_fra" onsubmit="return false;">
             <input type="text" id="i_ifra">
         </form>
+        <!------->
+        <!--TIL-->
+        <!------->
         <p class="i_p" id="i_pl"></p>
+        <!-- Append fra Javascript når nødvendig -->
         <form id="i_til" onsubmit="return false;"></form>
         <p id="velg"></p>
     </div>
