--- a/reiseplanlegger.html
+++ b/reiseplanlegger.html
@@ -10,6 +10,8 @@
 <body>
     <div class="index_wrapper">
         <h1 id="i_h1">Laster inn...</h1>
+        
+        <!-- Alle avganger skal komme opp i resultater (Alt gjøres i JS) -->
         <p id="resultater"></p>
     </div>
     <script src="reiseplanlegger.js"></script>
