--- a/trip.html
+++ b/trip.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+    <title>Trip</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="index_wrapper">
         <h1 id="i_h1">Laster inn...</h1>
+        <div id="visellerskulallestopp"></div>
+        <!-- Den spesifikke tripen skal vises i departuredisplay (Alt gjøres i JS) -->
         <div id="departuredisplay"></div>
-        <div id="map"></div>
     </div>
     <script src="trip.js"></script>
 </body>
