--- a/src/html/index.html
+++ b/src/html/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="index_wrapper">
-        <h1 id="i_h1">Reiseplanlegger</h1>
+        <div class="header">
+            <h1 id="i_h1">Reiseplanlegger</h1>
+        </div>
 
         <!------->
         <!--FRA-->
