--- a/trip.html
+++ b/trip.html
@@ -13,6 +13,8 @@
         <div id="visellerskulallestopp"></div>
         <!-- Den spesifikke tripen skal vises i departuredisplay (Alt gjøres i JS) -->
         <div id="departuredisplay"></div>
+        <button onclick="back()" class="button2">Gå tilbake</button>
+    </div>
     <script src="trip.js"></script>
 </body>
 </html>
