--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="index_wrapper">
         <h1 id="i_h1">Reiseplanlegger</h1>
+        <h3>Beta-versjon av v2 kan du finne <a href="https://alsta017.github.io/ruter-reiseplanlegger-v2">her</a></h3>
 
         <!------->
         <!--FRA-->
