--- a/ekstra_valg.html
+++ b/ekstra_valg.html
@@ -25,7 +25,7 @@
         <p class="e_p">Byttetid:</p>
         <select name="byttetid" id="byttetidid">
             <option value="0" selected>0 min</option>
-            <option value="1">1 min</option>¨
+            <option value="1">1 min</option>
             <option value="2">2 min</option>
             <option value="3">3 min</option>
             <option value="4">4 min</option>
